[package]
name = "pt_server"
version = "0.1.0"
authors = ["tamasfe"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-cors = "0.4"
actix-service = "1"
actix-rt = "1"

serde = "1"
serde_json = "1"

slog = "2"
slog-json = "2"
slog-async = "2"
slog-term = "2"

futures = "0.3"
anyhow = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
envy = "0.4"
time = "0.2.21"
url = { version = "2.1", features = ["serde"] }
aide = "0.1.0"
rand = "0.7"
once_cell = "1.4"

[dependencies.sqlx]
version = "0.4.0-beta.1"
git = "https://github.com/launchbadge/sqlx.git"
default-features = false
features = [
    "postgres",
    "runtime-actix",
    "macros",
    "time",
    "uuid",
    "json",
    "offline",
]
