[package]
name = "pt_util"
version = "0.1.0"
authors = ["tamasfe <tamasf97@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version = "0.3", features = ["postgres"] }
clap = "3.0.0-beta.2"
postgres = "0.17"
anyhow = "1"
